fix: home page header collapse

--- a/pages/home/style.scss
+++ b/pages/home/style.scss
@@ -80,6 +80,7 @@
 		padding-top: 80px;
 		background-size: 35%;
 		background-position: 94% 0%;
+		position: relative;
 		&__title {
 			font-size: 26px;
 			flex-direction: column;
